js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImports/lib1/l1a.8.kt
inline fun fun1() = "fun1-8"
